Fix text align for footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 1.2rem;
+    text-align: center;
 }
 .no-underline {
     text-decoration: none;
